# ai_dash

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  ai_dash.db  cloudbuild.yaml  docker-compose.yml  install.sh  pyproject.toml
.claude/skills/linear-ticket/: SKILL.md
.github/workflows/: deploy.yml  pr-checks.yml
backend/: auth.py  conftest.py  db.py  github.py  main.py  models.py  pricing.py  sse.py  test_auth.py  test_conftest_smoke.py  test_db.py  test_github.py  test_main.py  test_middleware.py  test_models.py  test_pricing.py  test_watcher.py  watcher.py
backend/adapters/: _common.py  claude_code.py  codex.py  gemini_cli.py  test_claude_code.py  test_codex.py  test_common.py  test_gemini_cli.py
backend/api/: auth_routes.py  routes.py  test_auth_routes.py  test_daily.py  test_ingest_transcript_store.py  test_routes.py  test_run_delete.py  test_scoping.py  test_stats.py
collector/: collector.py  requirements.txt  test_collector.py
docs/superpowers/plans/: 2026-07-05-auto-deploy.md  2026-07-05-collector-reliability.md  2026-07-06-infra-hardening.md  2026-07-06-mobile-layout.md  2026-07-06-openai-codex-adapter.md  2026-07-07-admin-run-delete.md  2026-07-07-ai7-auth-plan.md  2026-07-07-cost-tracking-plan.md  2026-07-07-gemini-cli-adapter.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
infra/: cloud_armor.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/k8s/: deployment.yaml  secret.example.yaml  service.yaml
(+28 files in other folders)
