[project]
name = "ai-dash"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "sse-starlette>=2.1.0",
    "bcrypt>=5.0.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
